[gd_scene load_steps=12 format=3 uid="uid://be2mu2jfbynxp"]

[ext_resource type="Texture2D" uid="uid://bmycweq7lbugy" path="res://Lvl3/bat/Assets/Bat (2).png" id="1_2yudu"]
[ext_resource type="Script" path="res://Lvl3/bat/bat.gd" id="1_yl0v7"]
[ext_resource type="PackedScene" uid="uid://daw3cc262u8by" path="res://Lvl3/bat/bat_bullets/bat_bullet.tscn" id="2_7rt71"]

[sub_resource type="AtlasTexture" id="AtlasTexture_12wf6"]
atlas = ExtResource("1_2yudu")
region = Rect2(317, 224, 317, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gjow"]
atlas = ExtResource("1_2yudu")
region = Rect2(634, 0, 317, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_w12vr"]
atlas = ExtResource("1_2yudu")
region = Rect2(0, 0, 317, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_drnbm"]
atlas = ExtResource("1_2yudu")
region = Rect2(317, 0, 317, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_sikvi"]
atlas = ExtResource("1_2yudu")
region = Rect2(0, 224, 317, 224)

[sub_resource type="SpriteFrames" id="SpriteFrames_bih6t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_12wf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gjow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w12vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drnbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sikvi")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bin1g"]
radius = 34.0
height = 160.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d0fmo"]
radius = 305.105

[node name="Bat" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_yl0v7")
bat_bullet = ExtResource("2_7rt71")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-9.53674e-07, 2.98023e-08)
scale = Vector2(0.59306, 0.566965)
sprite_frames = SubResource("SpriteFrames_bih6t")
animation = &"idle"
frame_progress = 0.315744

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bin1g")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
shape = SubResource("CircleShape2D_d0fmo")

[node name="Timer2" type="Timer" parent="."]

[node name="Node" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="Node"]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
